# packages/risk-service-api/src/models/index.ts
@@ -38,6 +38,9 @@ export * from "./EvidenceDocumentRead";
 export * from "./EvidenceRead";
 export * from "./FinancialAccountRead";
 export * from "./FinancialBalanceRead";
+export * from "./FinancialCashFlowCreate";
+export * from "./FinancialCashFlowRead";
+export * from "./FinancialCashFlowUpdate";
 export * from "./FinancialDataWorkspaceRead";
 export * from "./FinancialInstitutionRead";
 export * from "./FinancialManualEditRead";
